<resources>
    <string name="app_name">Calculator</string>
    <string name="n_0">0</string>
    <string name="s_ac">AC</string>
    <string name="s_p_m">+/-</string>
    <string name="s_percent">%</string>
    <string name="s_divide">/</string>
    <string name="n_7">7</string>
    <string name="n_8">8</string>
    <string name="n_9">9</string>
    <string name="s_x">x</string>
    <string name="n_4">4</string>
    <string name="n_5">5</string>
    <string name="n_6">6</string>
    <string name="s_mines">-</string>
    <string name="n_1">1</string>
    <string name="n_2">2</string>
    <string name="n_3">3</string>
    <string name="s_plus">+</string>
    <string name="s_equal">=</string>
    <string name="s_dot">.</string>
    <string name="textView_1">Policies</string>
    <string name="textView_2">Policy</string>
    <string name="textView_3">Product Category</string>
    <string name="textView_4">Origin Country</string>
    <string name="textView_5">Brand</string>
    <string name="textView_6">Current Policies</string>
    <string name="textView_7">Export as CSV</string>
    <string name="textView_8">Country of Origin</string>
    <string name="textView_9">Product Category</string>
    <string name="btn_second_activity">Second Activity</string>
</resources>